--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-dom": "^17.0.2",
     "react-id-generator": "^3.0.1",
     "react-leaflet": "^3.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "utm-latlng": "^1.0.6",
     "web-vitals": "^1.1.2"
   },
